add URL for DBLP:books/garland/Roberts63

--- a/doc/literature.bib
+++ b/doc/literature.bib
@@ -55,7 +55,8 @@
   series    = {Outstanding Dissertations in the Computer Sciences},
   year      = {1963},
   isbn      = {0-8240-4427-4},
-  bibsource = {DBLP, http://dblp.uni-trier.de}
+  bibsource = {DBLP, http://dblp.uni-trier.de},
+  url       = {http://www.packet.cc/files/mach-per-3D-solids.html}
 }
 
 @article{braden1986,
