rework section basics/edge-detection include more operators and a figure with an example for each mentioned operator

--- a/doc/document.tex
+++ b/doc/document.tex
@@ -86,6 +86,10 @@
 
 \newcommand{\qedsymbol}{\ensuremath{\blacksquare}}
 
+% Mark a piece of text as surname. Will render the name in all capitals and
+% withing an mbox (prevent word breaking).
+\newcommand{\surname}[1]{\mbox{\textsc{#1}}}
+
 %\pagestyle{scrheadings}
 %\setkomafont{pagehead}{\small\scshape}
 
