--- a/doc/literature.bib
+++ b/doc/literature.bib
@@ -97,3 +97,12 @@
   month     = apr,
   url       = {http://www.itu.int/dms_pubrec/itu-r/rec/bt/R-REC-BT.709-5-200204-I!!PDF-E.pdf}
 }
+
+@incollection{prewitt1070,
+  author    = {Judith M. S. Prewitt},
+  year      = 1970,
+  publisher = {Academic Press},
+  title     = {Object Enhancement and Extraction},
+  booktitle = {Picture processing and Psychopictorics},
+  url       = {http://web.eecs.utk.edu/~qi/ece472-572/reference/edge-Prewitt70.pdf}
+}
