fix caption of dilation examples

--- a/doc/tex/basics/dilation.tex
+++ b/doc/tex/basics/dilation.tex
@@ -13,5 +13,5 @@ Durch die Anwendung einer Dilation können Bildstrukturen zusammengefasst werden
   \centering
   \includegraphics[width=0.25\textwidth]{img/basics/dilation/before}
   \includegraphics[width=0.25\textwidth]{img/basics/dilation/after}
-  \caption[Dilation]{Dilation eines Grauwertbildes (100$\times$100 Pixel) mit einem 3$\times$3-Strukturelement. (a) Ausgangsbild, (b) Ergebnis der Dilation}
+  \caption[Dilation]{Ausgangsbild (100$\times$100 Pixel, links) diliert (rechts) mit einem 3$\times$3-Strukturelement}
 \end{figure}
