--- a/doc/tex/basics/segmentation.tex
+++ b/doc/tex/basics/segmentation.tex
@@ -51,7 +51,6 @@ Nutzt den Mittelwert der Helligkeit aller Bildpunkte als Schwellwert.
 Das ermittelte Schwellwert ist sinnvoll, wenn sich Bildelemente durch ihre Helligkeits bereits deutlich vom Hintergrund abheben.
 Im Allgemeinen ist der Mittelwert jedoch nicht optimal da dieser die Helligkeitsverteilung der Bildpunkte nicht berücksichtigt.
   \[ t = \frac{1}{N} \sum_{x,y} I(x,y), \quad N = \sum_{x,y} 1 \]
-%%\todo[author=Erik]{Mittelwert Vor- \& Nachteile}
 
 \subsubsection*{Iteratives Verfahren}
 \ldots
@@ -59,11 +58,11 @@ Im Allgemeinen ist der Mittelwert jedoch nicht optimal da dieser die Helligkeits
 \todo[author=\dcauthornameewie]{Iteratives Verfahren}
 
 \subsubsection*{Otsu's Method}
-\textsc{Otsu}'s Method ist ein histogrammbasiertes Verfahren, dass eine bimodale Helligkeitsverteilung\footnote{Eine bimodale Helligkeitsverteilung besitzt zwei Maxima die den Helligkeitswerten des Hintergrund bzw. Vordergrund entsprechen. Der optimale Schwellwert liegt im Tal zwischen den Maxima.} voraussetzt.
+\surname{Otsu}'s Method ist ein histogrammbasiertes Verfahren, dass eine bimodale Helligkeitsverteilung\footnote{Eine bimodale Helligkeitsverteilung besitzt zwei Maxima die den Helligkeitswerten des Hintergrund bzw. Vordergrund entsprechen. Der optimale Schwellwert liegt im Tal zwischen den Maxima.} voraussetzt.
 Der Algorithmus sucht den Schwellwert, der die Varianz innheralb der beiden Klassen minimiert.
 
 \subsubsection*{Balanced Histogram Thresholding}
-Das Balanced Histogram Thresholding erwartet, wie \textsc{Otsu}'s Method, eine bimodale Helligkeitsverteilung.
+Das Balanced Histogram Thresholding erwartet, wie \surname{Otsu}'s Method, eine bimodale Helligkeitsverteilung.
 Das Verfahren ermittelt den Schwellwert derart, dass dieser das Histogramm in zwei gleich "`schwere"' Hälften teilt.
 Als Maß für das Gewicht einer Hälfte dient die Summe der absoluten Häufigkeiten aller Klassen der betrachteten Hälfte.
 Von der schwereren Häfte werden solange Klassen entfernt bis nur noch eine Klasse betrachtet wird, welche dem gesuchten Schwellwert entspricht.
