add citation on Scharr operator in basics/edge-detection

--- a/doc/literature.bib
+++ b/doc/literature.bib
@@ -106,3 +106,11 @@
   booktitle = {Picture processing and Psychopictorics},
   url       = {http://web.eecs.utk.edu/~qi/ece472-572/reference/edge-Prewitt70.pdf}
 }
+
+@phdthesis{scharr2000,
+  author    = {Hanno Scharr},
+  year      = 2000,
+  title     = {Optimale Operatoren in der Digitalen Bildverarbeitung},
+  school    = {Ruprecht-Karls-Universität Heidelberg},
+  url       = {http://archiv.ub.uni-heidelberg.de/volltextserver/962/}
+}
