--- a/doc/tex/basics/edge-detection.tex
+++ b/doc/tex/basics/edge-detection.tex
@@ -48,8 +48,8 @@ Jedoch ist er bereits empfindlicher gegenüber Rauschen.
      \quad K_Y = K_X^\top \]
 
 \subsection*{Scharr-Operator}
-Der \surname{Scharr}-Operator ist eine Weiterentwicklung des \surname{Sobel}-Operators mit besserer Rotationssymmetrie.
-Erfasst Bildrauschen noch stärker als der \surname{Sobel}-Operator.
+Der \surname{Scharr}-Operator \cite[9.3]{scharr2000} ist eine Weiterentwicklung des \surname{Sobel}-Operators mit besserer Rotationssymmetrie.
+Erfasst Bildrauschen jedoch noch stärker als der \surname{Sobel}-Operator.
   \[ K_X = \begin{vmatrix}
         3 & 0 & -3 \\
        10 & 0 & -10 \\
