--- a/doc/document.tex
+++ b/doc/document.tex
@@ -55,6 +55,9 @@
 
 \usepackage{listings}
 
+\usepackage{caption}
+\usepackage{subcaption}
+
 \usepackage{color}
 \definecolor{string}{rgb}{0.16,0,1}
 \definecolor{identifier}{rgb}{0.25,0.5,0.5}
