--- a/doc/tex/basics/segmentation.tex
+++ b/doc/tex/basics/segmentation.tex
@@ -2,8 +2,8 @@
 \writtenby{\dcauthornameewie}%
 Die Segmentierung findet Anwendung bei der Klassifizierung von Bildelementen.
 Dabei wird jedes Pixel anhand eines Kriteriums einer Klasse zugeordnet.
-Ein simples Verfahren ist dabei die Verwendung eines Schwellwertes, das sogenannte \emph{thresholding}.
-
+Ein simples Verfahren ist dabei die Verwendung eines Schwellwertes, das sogenannte \emph{Thresholding}.
+%
   \[ C_I^{(n)}(x,y) = \begin{cases}[c@{\quad}r@{}c@{}l@{}]
        0      &              & \;I(x,y) & \;<    t_1     \\
        1      & t_1     \leq & \;I(x,y) & \;<    t_2     \\
@@ -12,35 +12,14 @@ Ein simples Verfahren ist dabei die Verwendung eines Schwellwertes, das sogenann
        n-1    &              & \;I(x,y) & \;\geq t_{n-1}
      \end{cases} \]
 %
-Eine der häufigsten Anwendungen ist die Einteilung eines Bildes in zwei Klassen.
-Für gewöhnlich ist dies die Trennung des Bildes in Vorder- und Hintergrund.
-
+Eine der häufigsten Anwendungen ist die Einteilung eines Bildes in zwei Klassen, z.B. Vorder- und Hintergrund.
+%
   \[ C_I^{(2)}(x,y) = \begin{cases}
        0 & I(x,y) <    t \\
        1 & I(x,y) \geq t
      \end{cases} \]
 %
-Die Berechnung des Schwellwerts $t$ ist dabei entscheidend über die Qualität der Segmentierung, d.h. dass Bildelemente korrekt klassifiziert werden.
-
-\subsection*{Varianten des Thresholding}
-Es existieren verschiedene Varianten der Anwendung das Schwellwertverfahrens.
-
-\todo[author=\dcauthornameewie]{ausführlicher}
-
-\subsubsection*{Globales Thresholding}
-Der Schwellwert wird für das gesamte Bild einmalig berechnet und auf alle Bildpunkte angewandt.
-Die Verwendung eines einzelnen Schwellwertes für das gesamte Bild funkioniert nur sofern das Bild gleichmäßtig Belichtet ist.
-Ansonsten kann es vorkommen, dass Bildteile die zu gering belichtet sind unterhalb des Schwellwertes liegen und somit als Hintergrund klassifiziert werden.
-
-\subsubsection*{Lokales Thresholding}
-Unterteilt das Bild in disjunkte Regionen und ermittelt jeweils einen eigenen Schwellwert, mit dem der jeweilige Bereich segmentiert wird.
-Die negativen Effekte des globalen Thresholding auf das Gesamtbild werden vermieden, können innerhalb einer Region aber dennoch auftreten.
-Wodurch es an den Regionsgrenzen zu unterschiedlichen Klassifikationen kommen kann.
-
-\subsubsection*{Dynamisches Thresholding}
-Ermittelt für jeden Bildpunkt einen Schwellwert unter Betrachtung der Umgebung des Bildpunktes.
-Anhand des Schwellwertes wird der Bildpunkt einer Klasse zugeordnet.
-Vermeidet die Fehler durch ein ungleiche Beleuchtung, wenn eine Pixelumgebung gewählt werden kann, die einer gleichmäßigen Beleuchtung unterliegt.
+Die Berechnung des Schwellwerts $t$ ist dabei entscheidend für die Qualität der Segmentierung, d.h. dass Bildelemente korrekt klassifiziert werden.
 
 \subsection*{Schwellwertbestimmung}
 Da die Wahl des Schwellwertes ausschlaggebend für die Genauigkeit der Klassifizierung ist, existieren diverse Algorithmen.
@@ -48,21 +27,63 @@ Diese machen sich zum Teil bestimmte Eigenschaften eines Bildes zu nutze und sin
 
 \subsubsection*{Mittelwert}
 Nutzt den Mittelwert der Helligkeit aller Bildpunkte als Schwellwert.
-Das ermittelte Schwellwert ist sinnvoll, wenn sich Bildelemente durch ihre Helligkeits bereits deutlich vom Hintergrund abheben.
+Der ermittelte Schwellwert ist sinnvoll, wenn sich Bildelemente durch ihre Helligkeits bereits deutlich vom Hintergrund abheben.
 Im Allgemeinen ist der Mittelwert jedoch nicht optimal da dieser die Helligkeitsverteilung der Bildpunkte nicht berücksichtigt.
   \[ t = \frac{1}{N} \sum_{x,y} I(x,y), \quad N = \sum_{x,y} 1 \]
 
 \subsubsection*{Iteratives Verfahren}
 \ldots
-
 \todo[author=\dcauthornameewie]{Iteratives Verfahren}
 
-\subsubsection*{Otsu's Method}
-\surname{Otsu}'s Method ist ein histogrammbasiertes Verfahren, dass eine bimodale Helligkeitsverteilung\footnote{Eine bimodale Helligkeitsverteilung besitzt zwei Maxima die den Helligkeitswerten des Hintergrund bzw. Vordergrund entsprechen. Der optimale Schwellwert liegt im Tal zwischen den Maxima.} voraussetzt.
+\subsubsection*{Otsu's Methode}
+\surname{Otsu}'s Methode ist ein histogrammbasiertes Verfahren, dass eine bimodale Helligkeitsverteilung\footnote{Eine bimodale Helligkeitsverteilung besitzt zwei Maxima die den Helligkeitswerten des Hintergrund bzw. Vordergrund entsprechen. Der optimale Schwellwert liegt im Tal zwischen den Maxima.} voraussetzt.
 Der Algorithmus sucht den Schwellwert, der die Varianz innheralb der beiden Klassen minimiert.
 
 \subsubsection*{Balanced Histogram Thresholding}
-Das Balanced Histogram Thresholding erwartet, wie \surname{Otsu}'s Method, eine bimodale Helligkeitsverteilung.
+Das Balanced Histogram Thresholding erwartet, wie \surname{Otsu}'s Methode, eine bimodale Helligkeitsverteilung.
 Das Verfahren ermittelt den Schwellwert derart, dass dieser das Histogramm in zwei gleich "`schwere"' Hälften teilt.
 Als Maß für das Gewicht einer Hälfte dient die Summe der absoluten Häufigkeiten aller Klassen der betrachteten Hälfte.
-Von der schwereren Häfte werden solange Klassen entfernt bis nur noch eine Klasse betrachtet wird, welche dem gesuchten Schwellwert entspricht.
+Von der schwereren Häfte wird solange die äußere Klasse entfernt bis nur noch eine Klasse betrachtet wird, welche dem gesuchten Schwellwert entspricht.
+
+\subsection*{Varianten des Thresholding}
+Es existieren verschiedene Varianten der Anwendung das Schwellwertverfahrens.
+\todo[author=\dcauthornameewie]{ausführlicher}
+
+\subsubsection*{Globales Thresholding}
+Der Schwellwert wird für das gesamte Bild einmalig berechnet und auf alle Bildpunkte angewandt.
+Die Verwendung eines einzelnen Schwellwertes für das gesamte Bild funkioniert nur sofern das Bild gleichmäßtig Belichtet ist.
+Ansonsten kann es vorkommen, zu dunkle Bildteile, aufgrund zu geringer Belichtung, als Hintergrund zu klassifizieren da diese unterhalb des Schwellwertes liegen.
+
+\subsubsection*{Lokales Thresholding}
+Durch Unterteilung des Bildes in disjunkte Regionen und Ermittelung sowie Anwendung eines Schwellwertes pro Region, können die negativen Effekte des globalen Thresholding auf das Gesamtbild verwieden werden.
+Innerhalb einer Region können jene Effekte aber dennoch auftreten, wodurch es an den Regionsgrenzen zu unterschiedlichen Klassifikationen kommen kann.
+
+\subsubsection*{Dynamisches Thresholding}
+Mit dynamischen Tresholding ist es möglich einer ungleichmäßigen Beleuchtung eines Bildes besser entgegenzuwirken.
+Dazu wird für jeden Bildpunkt ein Schwellwert unter Betrachtung seiner Umgebenung ermittelt.
+
+\begin{figure}[H]
+  \label{fig:segmentation}
+  \centering
+  \begin{subfigure}{0.49\linewidth}
+    \centering
+    \includegraphics[width=\linewidth]{img/basics/segmentation/original}
+    \caption{Original (526$\times$176)}
+  \end{subfigure}
+  \begin{subfigure}{0.49\linewidth}
+    \centering
+    \includegraphics[width=\linewidth]{img/basics/segmentation/global}
+    \caption{global}
+  \end{subfigure}
+  \begin{subfigure}{0.49\linewidth}
+    \centering
+    \includegraphics[width=\linewidth]{img/basics/segmentation/local}
+    \caption{lokal (Einteilung in 100$\times$100)}
+  \end{subfigure}
+  \begin{subfigure}{0.49\linewidth}
+    \centering
+    \includegraphics[width=\linewidth]{img/basics/segmentation/dynamic}
+    \caption{dynamisch (3$\times$3 Nachbarschaft)}
+  \end{subfigure}
+  \caption[Vergleich von Thresholding Varianten]{Vergleich von Thresholding Varianten für Text bei ungleichmäßiger Belichtung. Als Schwellwert dient jeweils der oben beschriebene Mittelwert.}
+\end{figure}
