fix label prefix of figure from ref: to fig: in basics/edge-detection

--- a/doc/tex/basics/edge-detection.tex
+++ b/doc/tex/basics/edge-detection.tex
@@ -58,7 +58,7 @@ Erfasst Bildrauschen jedoch noch stärker als der \surname{Sobel}-Operator.
      \quad K_Y = K_X^\top \]
 
 \begin{figure}[H]
-  \label{ref:edge-detection}
+  \label{fig:edge-detection}
   \centering
   \includegraphics[width=0.1925\textwidth]{img/basics/edge-detection/original}
   \includegraphics[width=0.1925\textwidth]{img/basics/edge-detection/roberts}
