add citations on Otsu's method and BHT in basics/segmentation

--- a/doc/literature.bib
+++ b/doc/literature.bib
@@ -114,3 +114,38 @@
   school    = {Ruprecht-Karls-Universität Heidelberg},
   url       = {http://archiv.ub.uni-heidelberg.de/volltextserver/962/}
 }
+
+@article{otsu1979,
+  author    = {Nobuyuki Otsu},
+  title     = {A Threshold Selection Method from Gray-Level Histograms},
+  journal   = {IEEE Transactions on Systems, Man and Cybernetics},
+  year      = 1979,
+  month     = jan,
+  pages     = {62--66},
+  url       = {http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=4310076}
+}
+
+@inproceedings{DBLP:conf/biostec/AnjosS08,
+  author    = {Ant{\'o}nio dos Anjos and
+               Hamid Shahbazkia},
+  title     = {Bi-Level Image Thresholding - A Fast Method},
+  booktitle = {BIOSIGNALS (2)},
+  year      = {2008},
+  pages     = {70-76},
+  crossref  = {DBLP:conf/biostec/2008bs2},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+@proceedings{DBLP:conf/biostec/2008bs2,
+  editor    = {Pedro Encarna\c{c}{\~a}o and
+               Ant{\'o}nio Veloso},
+  title     = {Proceedings of the First International Conference on Biomedical
+               Electronics and Devices, BIOSIGNALS 2008, Funchal, Madeira,
+               Portugal, January 28-31, 2008, Volume 2},
+  booktitle = {BIOSIGNALS (2)},
+  publisher = {INSTICC - Institute for Systems and Technologies of Information,
+               Control and Communication},
+  year      = {2008},
+  isbn      = {978-989-8111-18-0},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
