add citation in basics/dilation also some corrections on writing

--- a/doc/literature.bib
+++ b/doc/literature.bib
@@ -149,3 +149,11 @@
   isbn      = {978-989-8111-18-0},
   bibsource = {DBLP, http://dblp.uni-trier.de}
 }
+
+@book{steinmueller2008,
+  title     = {Bildanalyse: Von der Bildverarbeitung zur räumlichen Interpretation von Bildern},
+  author    = {Johannes Steinmüller},
+  publisher = {Springer},
+  year      = {2008},
+  isbn      = {9783540797425}
+}
