--- a/doc/tex/basics/dilation.tex
+++ b/doc/tex/basics/dilation.tex
@@ -3,15 +3,24 @@
 % Erosion und Dilation, Öffnen und Schliessen
 % aus Voss & Süße 1991
 Die Dilatation ist eine morphologische Operation um Strukturen eines Bildes zu vergrößern.
-Für die Dilation eines Grauwertbildes wird jedem Pixel der Maximalwert aller Pixel innerhalb einer gewissen Umgebung zugewiesen.
-Für die Beschreibung der Umgebung verwendet man ein Strukturelement fester Größe und Form (z.B. ein 3$\times$3 Quadrat), welches mit seinem Mittelpunkt $(0,0)$ über dem betrachteten Pixel platziert wird.
-  \[ (I\oplus K)(x,y)= \max \left\{ I(x+u,y+v) \;\middle|\; (u,v) \in K \right\} \quad K \subseteq \mathbb{Z}^2 \]
-Durch die Anwendung einer Dilation können Bildstrukturen zusammengefasst werden wenn deren Abstand kleiner ist als die Größe des Strukturelements.
+Bei die Dilation eines Grauwertbildes wird jedem Pixel der Maximalwert aller Pixel innerhalb einer gewissen Umgebung zugewiesen \cite[3.5]{steinmueller2008}.
+Zur Beschreibung der Umgebung dient ein Strukturelement $X$ fester Größe und Form (z.B. ein 3$\times$3 Quadrat), welches mit seinem Mittelpunkt $(0,0)$ über dem betrachteten Pixel platziert wird.
+  \[ (I\oplus X)(x,y)= \max \left\{ I(x+u,y+v) \;\middle|\; (u,v) \in X \right\} \quad X \subseteq \mathbb{Z}^2 \]
+Eine Dilation findet Anwendung um Bildstrukturen zu verstärken und zusammenzufassen \cite[3.1]{steinmueller2008}.
+Es können aber nur Bildstrukturen zusammengefasst werden sofern das Strukturelement groß genug ist um Zwischenräume zu überbrücken.
 
 \begin{figure}[H]
   \label{fig:dilation}
   \centering
-  \includegraphics[width=0.25\textwidth]{img/basics/dilation/before}
-  \includegraphics[width=0.25\textwidth]{img/basics/dilation/after}
-  \caption[Dilation]{Ausgangsbild (100$\times$100 Pixel, links) diliert (rechts) mit einem 3$\times$3-Strukturelement}
+  \begin{subfigure}{0.49\linewidth}
+    \centering
+    \includegraphics[width=0.5\textwidth]{img/basics/dilation/before}
+    \caption{Ausgangsbild (100$\times$100 Pixel)}
+  \end{subfigure}
+  \begin{subfigure}{0.49\linewidth}
+    \centering
+    \includegraphics[width=0.5\textwidth]{img/basics/dilation/after}
+    \caption{diliert mit einem 3$\times$3-Strukturelement}
+  \end{subfigure}
+  \caption{Beispiel einer Dilation eines Grauwertbildes}
 \end{figure}
