add citation on thresholding variants in basics/segmentation some rephrasing

--- a/doc/literature.bib
+++ b/doc/literature.bib
@@ -157,3 +157,12 @@
   year      = {2008},
   isbn      = {9783540797425}
 }
+
+@book{davies2012,
+  author    = {E. R. Davies},
+  title     = {Computer and Machine Vision: Theory, Algorithms, Practicalities},
+  publisher = {Academic Press},
+  year      = {2012},
+  edition   = {4.},
+  isbn      = {978-0-12-386908-1}
+}
