--- a/doc/tex/appendix/proof-division.tex
+++ b/doc/tex/appendix/proof-division.tex
@@ -1,24 +1,34 @@
-\chapter{Beweis Division durch Rechtsshift}
+\chapter{Beweis der ganzahligen Division durch Rechtsshift}
 \label{proof-division}
 \writtenby{\dcauthornameewie}%
 \paragraph{Satz}
-Eine natürliche Zahl kann durch Rechtsshift um $k\in\mathbb{N}_0$ Bits im Binärsystem durch $2^k$ geteilt werden.
+Der Rechtsshift um $k\in\mathbb{N}_0$ Bits einer natürliche Zahl $b$ ergibt den Quotienten der ganzahligen Division von $b$ mit $2^k$.
+\begin{equation}
+  b >\!\!> k = \frac{b-r}{2^k} \quad r < 2^k
+\end{equation}
 
 \paragraph{Definition}
-Sei $B$ eine Binärzahl der Form
-  \[ B = \sum_{i=0}^{n-1} b_i 2^i \quad b_i \in \{0,1\} \forall i \]
-und der Rechtsshift von $B$ um $k$ Bits wie folgt definiert
-  \[ B >\!\!> k = \left\lfloor\sum_{i=k}^{n-1} b_i 2^{i-k}\right\rfloor
-       \quad k\in\mathbb{N}_0 \cap [0,n) \]
+Sei $b$ eine Binärzahl der Form
+\begin{equation}
+  \label{eq:bin}
+  b = \sum_{i=0}^{n-1} b_i 2^i \quad b_i \in \{0,1\}
+\end{equation}
+und der Rechtsshift von $b$ um $k$ Bits sei wie folgt definiert (alle Bits werden um $k$ Stellen nach rechts verschoben, wodurch die Bits $b_0$ bis $b_{k-1}$ wegfallen)
+\begin{equation}
+  \label{eq:rsh}
+  b >\!\!> k = \sum_{i=k}^{n-1} b_i 2^{i-k} \quad k \in \mathbb{N}_0
+\end{equation}
 
 \paragraph{Beweis}
 \begin{align*}
-  B >\!\!> k &\overset{!}{=} \left\lfloor\frac{B}{2^k}\right\rfloor \\
-    &= \left\lfloor2^{-k} \sum_{i=0}^{n-1} b_i 2^i\right\rfloor
-     = \left\lfloor\sum_{i=0}^{n-1} b_i \frac{2^i}{2^{k}}\right\rfloor
-     = \left\lfloor\sum_{i=0}^{n-1} b_i 2^{i-k}\right\rfloor \\
-    &= \Bigg\lfloor\underbrace{\sum_{i=0}^{k-1} b_i 2^{i-k}}_\text{Nullfolge}
-       + \sum_{i=k}^{n-1} b_i 2^{i-k}\Bigg\rfloor \\
-    &= \left\lfloor{\sum_{i=k}^{n-1} b_i 2^{i-k}}\right\rfloor \\
+  b >\!\!> k &\overset{!}{=} \frac{b-r}{2^k}  \\
+    &= 2^{-k} b - 2^{-k} r \\
+    &= 2^{-k} \sum_{i=0}^{n-1} b_i 2^i - 2^{-k} \sum_{i=0}^{k-1} r_i 2^i
+      \tag*{Anwendung von \eqref{eq:bin} auf $b$ und $r$} \\
+    &= \sum_{i=0}^{n-1} b_i 2^i 2^{-k} - \sum_{i=0}^{k-1} r_i 2^i 2^{-k} \\
+    &= \sum_{i=0}^{n-1} b_i 2^{i-k} - \sum_{i=0}^{k-1} r_i 2^{i-k} \\
+    &= \sum_{i=k}^{n-1} b_i 2^{i-k} + \underbrace{\sum_{i=0}^{k-1} b_i 2^{i-k} - \sum_{i=0}^{k-1} r_i 2^{i-k}}_{\text{Null, da}~ r_i = b_i~\forall i \in [0,k)} \\
+    &= \sum_{i=k}^{n-1} b_i 2^{i-k}
+      \tag*{entspricht der Definition des Rechtsshifts \eqref{eq:rsh}}
 \end{align*}
 \hfill \qedsymbol
