add figure with connectivities in basics/connected-components

--- a/doc/document.tex
+++ b/doc/document.tex
@@ -112,7 +112,10 @@
 }
 \makeatother
 
-\hyphenation{Hell-ig-keits-ver-teil-ung}
+\hyphenation{
+  Hell-ig-keits-ver-teil-ung
+  Scan-line-ver-fahr-ens
+}
 
 \begin{document}
 \input{tex/meta}
