change connectivity graphics to grayscale to avoid problems when printed out in grayscale otherwise the colors would not match with text describing the figure

--- a/doc/tex/basics/connected-components.tex
+++ b/doc/tex/basics/connected-components.tex
@@ -22,7 +22,7 @@ Für die Nachbarschaft gibt es verschiedene Modelle.
     \includegraphics[width=0.5\columnwidth]{img/basics/connected-compontents/8-connectivity}
     \caption{8-Konnektivität}
   \end{subfigure}
-  \caption[Vergleich von Pixelnachbarschaften]{Vergleich von Pixelnachbarschaften, mit dem betrachteten Pixel markiert in rot und den Pixeln der Nachbarschaft in grau.}
+  \caption[Vergleich von Pixelnachbarschaften]{Vergleich von Pixelnachbarschaften, mit dem betrachteten Pixel markiert in Dunkelgrau und den Pixeln der Nachbarschaft in Hellgrau.}
 \end{figure}
 %
 Je mehr Pixel als Nachbarschaft herangezogen werden, desto größer können die zusammenhängenden Komponenten ausfallen, da es mehr Möglichkeiten gibt in denen zwei Pixel als verbunden gelten.
