add BibTeX item roberts1963 to cite the original MIT publication

--- a/doc/literature.bib
+++ b/doc/literature.bib
@@ -59,6 +59,15 @@
   url       = {http://www.packet.cc/files/mach-per-3D-solids.html}
 }
 
+@phdthesis{roberts1963,
+  author    = {Lawrence G. Roberts},
+  title     = {Machine Perception of Three-Dimensional Solids},
+  publisher = {Massachusetts Institute of Technology},
+  school    = {Massachusetts Institute of Technology. Dept. of Electrical Engineering},
+  year      = {1963},
+  url       = {http://hdl.handle.net/1721.1/11589}
+}
+
 @article{braden1986,
   author    = {Braden, Bart},
   title     = {The Surveyor's Area Formular},
