--- a/doc/tex/basics/edge-detection.tex
+++ b/doc/tex/basics/edge-detection.tex
@@ -18,7 +18,7 @@ wobei die einfachere Formel
 ebenfalls eine gute Annäherung bietet \cite[Kap.~5.2]{davies2012}.
 
 \subsection*{Roberts-Operator}
-Der Ursprung des \surname{Roberts}-Operators \cite[S.~26]{DBLP:books/garland/Roberts63} ist die Kantenerkennung in technischen Strichzeichnungen.
+Der Ursprung des \surname{Roberts}-Operators \cite[S.~26]{roberts1963} ist die Kantenerkennung in technischen Strichzeichnungen.
 Im vergleich zu anderen Operatoren erzeugt er dünnere Kanten.
 Hat dadurch aber den Vorteil Bildrauschen weniger stark als Kanten zu erfassen.
   \[ K_X = \begin{vmatrix}
